--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,15 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
+    text-align: center;
 }
 h1{
     color: orangered;
-    margin-bottom: 20px;
+    margin: 50px 0;
+}
+
+p{
+    border: 2px solid #333;
+    border-radius: 5px;
+    padding: 20px;
 }
